--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+    <div class="col-md-6 row">
+    <h1>{{title}}</h1>
+    </div>
+
+</div>
+
+<section>
+<img>
+
+</section>
