--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,11 +25,12 @@
           <a class="nav-link" href="/events">Events</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign up</a>
+          <a class="nav-link" href="/signup">Sign up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log in</a>
+          <a class="nav-link" href="/login">Log in</a>
         </li>
+        
       </ul>
     </div>
   </nav>
@@ -50,7 +51,37 @@
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
 
-  <script src="/javascripts/script.js"></script>
+<script src="/javascripts/script.js"></script>
 </body>
-
+<footer>
+  <div class="container">
+    <br>
+    <div class="row">
+      <div class="col-md-4 col-lg-2">
+        <h5>Facebook</h5>
+        <p><i class="fab fa-facebook"></i> <a href="#">/XXXXXXXXXXX</a></p>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h5 id="contacto">Contacto</h5>
+        <p>XXXXXXXXX</p>
+        <p>XXXXXXXXXXXXX<br>
+          XXXXXXXXXXXXX<br>
+          XXXXXXXXXXXXX</p>
+      </div>
+      <div class="col-md-4 col-lg-6">
+        <h5>
+          Partners
+        </h5>
+        <ul>
+          <li>
+            <a href="/partner/signup">Signup</a>
+          </li>
+          <li>
+            <a href="/partner/login">Log in</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
