--- a/views/main/event-list.hbs
+++ b/views/main/event-list.hbs
@@ -2,13 +2,16 @@
 
     <h2>Events</h2>
 
-    <div class="col-md-6">
-        <ul>
-            <li>Hola</li>
-            <li>K Ase</li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
+    <figure class="col-md-6">
 
+
+    </figure>
+    <div class="col-md-4">
+
+    </div>
 </div>
+
+{{!-- <script src="./js/styles.js"></script>
+<script src="./js/directions.js"></script>
+<script src="./js/app.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=____aqui_tu_api_key____&callback=initApp"></script> --}}
