--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,8 @@
 <div class="container">
     <div class="col-md-6 row">
-    <h1>{{title}}</h1>
+        <h1>{{title}}</h1>
     </div>
 
 </div>
 
-<section>
-<img>
-
-</section>
+<section class="main-image"><img src="https://i.ytimg.com/vi/ilbgklhtWHA/maxresdefault.jpg" alt="Main img"></section>
