--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,26 +12,25 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">{{Title}}</a>
+  <nav class="navbar navbar-expand-lg navbar-light navbar-background">
+
+    <a class="navbar-brand" href="/">{{Title}}</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/events">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Sign up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Log in</a>
-        </li>
-        
+        <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
       </ul>
+
     </div>
   </nav>
 
@@ -41,6 +40,7 @@
   </main>
 
 
+  {{!-- 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -49,11 +49,46 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> --}}
 
-<script src="/javascripts/script.js"></script>
+
+  <script src="/javascripts/script.js"></script>
 </body>
-<footer>
+
+<footer class="alternative-links">
+
+  <div class="container">
+
+    <div class="row">
+
+
+      {{!-- <div class="col-12 col-md-6">
+        <a class="navigation-links" href="#">Status</a>
+        <a class="navigation-links" href="#">Privacy Terms</a>
+        <a class="navigation-links" href="#">Contact Us</a>
+      </div> --}}
+
+      <div class="col-12 col-md-3 social ">
+        <p>
+        <h5>Partners</h5>
+        </p>
+        <p><a class="navigation-links" href="/partner/signup">Signup</a><a class="navigation-links"
+            href="/partner/login">Log in</a></p>
+        <p></p>
+
+
+      </div>
+    </div>
+
+  </div>
+
+
+</footer>
+
+
+
+
+{{!-- <footer>
   <div class="container">
     <br>
     <div class="row">
@@ -83,5 +118,6 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> --}}
+
 </html>
