--- a/views/client/signup.hbs
+++ b/views/client/signup.hbs
@@ -4,7 +4,7 @@
 
             <h1>Regístrate</h1>
 
-            <form action="/login" method="POST">
+            <form action="/signup" method="POST">
                 <div class='form-group'>
                     <label for='username'>Nombre de usuario</label>
                     <input name='username' type='text' class='form-control' placeholder='Nombre de usuario'
