--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -72,11 +72,9 @@
         <p>
         <h5>Partners</h5>
         </p>
-        <p><a class="navigation-links" href="/partner/signup">Signup</a><a class="navigation-links"
-            href="/partner/login">Log in</a></p>
-        <p></p>
-
-
+        <p><a class="navigation-links" href="/partner/signup">Signup</a>
+        <a class="navigation-links" href="/partner/login">Log in</a></p>
+        
       </div>
     </div>
 
