--- a/views/admin/admin-login.hbs
+++ b/views/admin/admin-login.hbs
@@ -2,23 +2,19 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
 
-            <h1>Regístrate</h1>
+            <h1>Inicio </h1>
 
-            <form action="/signup" method="POST">
+            <form action="/login" method="POST">
                 <div class='form-group'>
-                    <label for='username'>Nombre de usuario</label>
-                    <input name='username' type='text' class='form-control' placeholder='Nombre de usuario'
+                    <label for='username'>Credenciales</label>
+                    <input name='username' type='text' class='form-control' placeholder='Credenciales'
                         id='username'>
                 </div>
                 <div class='form-group'>
                     <label for='password'>Contraseña</label>
                     <input name='password' type='password' class='form-control' placeholder='******' id='password'>
                 </div>
-                <div class='form-group'>
-                    <label for='email'>Email</label>
-                    <input name='email' type='text' class='form-control' placeholder='******' id='TO-DO'>
-                </div>
-                <button type='submit' class='btn btn-dark btn-block'>Regístrate</button>
+                <button type='submit' class='btn btn-dark btn-block'>Iniciar sesión</button>
                 {{#if errorMsg}}
                 <p style="margin-top: 10px;background: red; color: white; text-align: center; padding: 10px">
                     {{errorMsg}}</p>
@@ -27,3 +23,4 @@
 
         </div>
     </div>
+</div>
