--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,16 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>{{title}}</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light navbar-background">
+  <nav class="navbar navbar-expand-lg navbar-light navbar-background sticky-top nav-bar">
 
-    <a class="navbar-brand" href="/">{{Title}}</a>
+    <a class="navbar-brand" href="/">lineApp</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,6 +30,12 @@
         <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+
+      </ul>
       </ul>
 
     </div>
@@ -40,19 +47,12 @@
   </main>
 
 
-  {{!-- 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script> --}}
 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-  <script src="/javascripts/script.js"></script>
+  {{!-- <script src="/javascripts/script.js"></script> --}}
 </body>
 
 <footer class="alternative-links">
@@ -60,7 +60,6 @@
   <div class="container">
 
     <div class="row">
-
 
       {{!-- <div class="col-12 col-md-6">
         <a class="navigation-links" href="#">Status</a>
@@ -72,9 +71,10 @@
         <p>
         <h5>Partners</h5>
         </p>
-        <p><a class="navigation-links" href="/partner/signup">Signup</a>
-        <a class="navigation-links" href="/partner/login">Log in</a></p>
-        
+        <p><a class="navigation-links" href="TO-DO">Be a Partner</a>
+          <a class="navigation-links" href="/partner/signup">Signup</a>
+          <a class="navigation-links" href="/partner/login">Log in</a></p>
+
       </div>
     </div>
 
