--- a/views/main/event-details.hbs
+++ b/views/main/event-details.hbs
@@ -1,1 +1,23 @@
-<h1>Vendo Opel Corsa</h1>
+<div class="container">
+
+    <h2>Details</h2>
+
+    <figure class="col-md-12 map"></figure>
+
+    <div class="row col-md-12 justify-content-right">
+
+        {{#each allEvents}}
+        <div class="col-md-6">
+            <a href="/events/{{id}}'">
+                <h3>{{name}}</h3>
+            </a>
+            <h5>{{description}} {{genre}} </h5>
+            <p>Duration {{duration}} mins</p>
+            <p>{{date}}</p>
+            <img src="{{pictureUrl}}" alt="Concert">
+            <p>{{location}}</p>
+        </div>
+        {{/each}}
+
+    </div>
+</div>  
