--- a/views/main/event-list.hbs
+++ b/views/main/event-list.hbs
@@ -2,7 +2,7 @@
 
     <h2>Events</h2>
 
-    <figure class="col-md-12 map"></figure>
+    <figure class="col-md-12" id="map"></figure>
 
     <div class="row col-md-12 justify-content-right">
 
@@ -22,8 +22,11 @@
     </div>
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=____aqui_tu_api_key____&callback=initApp"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
-<script src="./js/styles.js"></script>
-<script src="./js/directions.js"></script>
-<script src="./js/app.js"></script>
+<script src="./javascripts/styles.js"></script>
+<script src="./javascripts/directions.js"></script>
+<script src="./javascripts/app.js"></script>
+
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDmun7W0Tdt5JO7ZyWRDO1GQjcMPnBpmM&callback=initApp"></script>
