--- a/views/partner/index.hbs
+++ b/views/partner/index.hbs
@@ -4,18 +4,19 @@
         <h1>{{title}}</h1>
     </div> --}}
 
-{{#each allPartners}}
-<p>{{{partner.name}}}</p>
-{{/each}}
-<div class="row">
-<div class="col-md-8">
-    <h4>hola</h4>
-</div>
-</div>
+    {{#each allPartners}}
+    <p>{{{this.name}}}</p>
+    <p>{{{this.id}}}</p>
+    {{/each}}
+    <div class="row">
+        <div class="col-md-8">
+            <h4>hola</h4>
+        </div>
+    </div>
 
 
-<div class="col-md-4 column">
-    <a class="btn-block" href="TO-DO">Edit</a>
-    <a class="btn-block btn-danger"  href="TO-DO">Delete</a>
-</div>
+    <div class="col-md-4 column">
+        <a class="btn-block" href="TO-DO">Edit</a>
+        <a class="btn-block btn-danger" href="TO-DO">Delete</a>
+    </div>
 </div>
