--- a/views/main/event-list.hbs
+++ b/views/main/event-list.hbs
@@ -2,7 +2,9 @@
 
     <h2>Events</h2>
 
-    <figure class="col-md-12" id="map"></figure>
+    <div class="row">
+        <figure class="col-md-12" id="map"></figure>
+    </div>
 
     <div class="row col-md-12 justify-content-right">
 
