--- a/views/main/about.hbs
+++ b/views/main/about.hbs
@@ -1,1 +1,11 @@
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-7">
+            
+        </div>
+    </div>
+</div>
+
+
 <h2>About</h2>
