--- a/views/main/event-list.hbs
+++ b/views/main/event-list.hbs
@@ -22,11 +22,10 @@
     </div>
 </div>
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+//<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"></script>
 <script src="./javascripts/styles.js"></script>
-<script src="./javascripts/directions.js"></script>
-<script src="./javascripts/app.js"></script>
+<script src="./javascripts/map.js"></script>
 
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDmun7W0Tdt5JO7ZyWRDO1GQjcMPnBpmM&callback=initApp"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvBmAoi77sTvplzGG-uAcK9mOxngTEmuY&callback=initApp"></script>
