--- a/views/partner/signup.hbs
+++ b/views/partner/signup.hbs
@@ -4,10 +4,10 @@
 
             <h1>Regístrate</h1>
 
-            <form action="/login" method="POST">
+            <form action="/signup" method="POST">
                 <div class='form-group'>
                     <label for='username'>Nombre de partner</label>
-                    <input name='username' type='text' class='form-control' placeholder='Nombre de partner'
+                    <input name='name' type='text' class='form-control' placeholder='Nombre de partner'
                         id='username'>
                 </div>
 
