--- a/views/main/event-new.hbs
+++ b/views/main/event-new.hbs
@@ -1,11 +1,10 @@
 <h1>PARTNER NEW EVENT</h1>
 
 
-
 <div class="container">
     <h1>Nuevo evento</h1>
 
-    {{!-- <form method="POST" action="/events/edit-events?eventsId={{_id}}"> --}}
+    <form method="POST" action="/events/new-event?eventsId={{_id}}">
 
         <div class="form-group">
             <label>Nombre</label>
