--- a/views/main/event-details.hbs
+++ b/views/main/event-details.hbs
@@ -8,7 +8,7 @@
 
         {{#each allEvents}}
         <div class="col-md-6">
-            <a href="/events/{{id}}'">
+            <a href="/events/{{id}}">
                 <h3>{{name}}</h3>
             </a>
             <h5>{{description}} {{genre}} </h5>
@@ -18,6 +18,8 @@
             <p>{{location}}</p>
         </div>
         {{/each}}
+
+        <a href="/edit/{{id}}">Editar</a>
 
     </div>
 </div>  
