--- a/views/main/event-edit.hbs
+++ b/views/main/event-edit.hbs
@@ -1,6 +1,3 @@
-
-
-
 <h1>EDITAR {{name}}<h1>
 
 
@@ -8,41 +5,44 @@
         <div class="container">
             <h1>Editar eventos</h1>
 
-            <form method="POST" action="/events/edit?events_id={{events.id}}">
+            <form method="POST" action="/events/edit?eventsId={{_id}}">
 
                 <div class="form-group">
                     <label>Nombre</label>
-                    <input name="name" type="text" class="form-control" id="name-input" value="{{name}}">
+                    <input name="name" type="text" class="form-control" id="name-input" value="{{theEvent.name}}">
                 </div>
 
                 <div class="form-group">
                     <label>Descripción</label>
-                    <input name="description" type="text" class="form-control" id="description-input" value="{{description}}">
+                    <input name="description" type="text" class="form-control" id="description-input"
+                        value="{{theEvent.description}}">
+                </div>
+
+                <div class="form-group">
+                    <label>Imagen</label>
+                    <input name="pictureUrl" type="text" class="form-control" id="pictureUrl-input"
+                        value="{{theEvent.pictureUrl}}">
                 </div>
 
                 <div class="form-group">
                     <label>Duración</label>
-                    <input name="duration" type="text" class="form-control" id="duration-input" value="{{duration}}">
-                </div>
-
-                <div class="form-group">
-                    <label>Fecha</label>
-                    <input name="date" type="text" class="form-control" id="date-input" value="{{date}}">
+                    <input name="duration" type="text" class="form-control" id="duration-input"
+                        value="{{theEvent.duration}}">
                 </div>
 
                 <div class="form-group">
                     <label>Género</label>
-                    <input name="genre" type="text" class="form-control" id="genre-input" value="{{genre}}">
+                    <input name="genre" type="text" class="form-control" id="genre-input" value="{{theEvent.genre}}">
                 </div>
 
                 <div class="form-group">
-                    <label>Localización</label>
-                    <input name="location" type="text" class="form-control" id="location-input" value="{{location}}">
+                    <label>Latitud</label>
+                    <input name="latitude" type="text" class="form-control" id="latitude-input" value="{{latitude}}">
                 </div>
 
                 <div class="form-group">
-                    <label>Active</label>
-                    <input name="active" type="text" class="form-control" id="active-input" value="{{active}}">
+                    <label>Longitud</label>
+                    <input name="longitude" type="text" class="form-control" id="longitude-input" value="{{longitude}}">
                 </div>
 
                 <button type="submit" class="btn btn-dark btn-block">Modificar evento</button>
@@ -50,4 +50,3 @@
             </form>
 
         </div>
-   
