--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,14 +27,13 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+
+        <li class="nav-item"><a class="nav-link " href="/signup">Sign up</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-
       </ul>
       </ul>
 
@@ -61,61 +60,17 @@
 
     <div class="row">
 
-      {{!-- <div class="col-12 col-md-6">
-        <a class="navigation-links" href="#">Status</a>
-        <a class="navigation-links" href="#">Privacy Terms</a>
-        <a class="navigation-links" href="#">Contact Us</a>
-      </div> --}}
-
       <div class="col-12 col-md-3 social ">
-        <p>
-        <h5>Partners</h5>
-        </p>
-        <p><a class="navigation-links" href="TO-DO">Be a Partner</a>
-          <a class="navigation-links" href="/partner/signup">Signup</a>
-          <a class="navigation-links" href="/partner/login">Log in</a></p>
+
+        <a class="navigation-links" href="TO-DO">Partners</a>
+        <a class="navigation-links" href="/partner/signup">Signup</a>
+        <a class="navigation-links" href="/partner/login">Log in</a>
 
       </div>
     </div>
 
   </div>
-
 
 </footer>
-
-
-
-
-{{!-- <footer>
-  <div class="container">
-    <br>
-    <div class="row">
-      <div class="col-md-4 col-lg-2">
-        <h5>Facebook</h5>
-        <p><i class="fab fa-facebook"></i> <a href="#">/XXXXXXXXXXX</a></p>
-      </div>
-      <div class="col-md-4 col-lg-4">
-        <h5 id="contacto">Contacto</h5>
-        <p>XXXXXXXXX</p>
-        <p>XXXXXXXXXXXXX<br>
-          XXXXXXXXXXXXX<br>
-          XXXXXXXXXXXXX</p>
-      </div>
-      <div class="col-md-4 col-lg-6">
-        <h5>
-          Partners
-        </h5>
-        <ul>
-          <li>
-            <a href="/partner/signup">Signup</a>
-          </li>
-          <li>
-            <a href="/partner/login">Log in</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer> --}}
 
 </html>
