--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: sans-serif; }
 
+h1, h2, h3, h4, h5 {
+  font-weight: 500; }
+
 img {
   width: 100%; }
 
@@ -13,27 +16,49 @@ a:hover {
   color: black;
   text-decoration: none; }
 
-.nav-bar {
-  background-color: #ffffff;
-  margin-bottom: 40px;
-  box-shadow: 0px 1px 6px #7f7f7f; }
-
 .navigation-links {
   padding-left: 10px; }
 
-.hero {
-  margin-bottom: 10px; }
+.titles {
+  margin-top: 20px; }
+
+.subtitles {
+  margin-top: 20px; }
+
+.nav-bar {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px #7f7f7f;
+  margin-bottom: 20px; }
+
+footer {
+  margin-top: 0px;
+  padding-top: 50px; }
+
+#hero {
+  width: 100%;
+  height: 600px;
+  margin-top: 20px;
+  z-index: -9999; }
+
+.claim {
+  font-weight: 500;
+  z-index: 999; }
 
 #map {
   height: 400px;
-  background-color: #7f7f7f; }
+  background-color: #7f7f7f;
+  width: 100%; }
 
 .event-view {
   height: 14rem;
   object-fit: cover;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  margin-top: 10px; }
 
-footer {
-  border-top: 1px solid #7f7f7f; }
+.button-top {
+  margin-top: 20px; }
+
+.button-down {
+  margin-top: 20px; }
 
 /*# sourceMappingURL=style.css.map */
