--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2,6 +2,12 @@ body {
   font-family: sans-serif;
 }
 
+h1,h2,h3,h4,h5{
+  font-weight: 500;
+}
+
+
+
 img{
   width: 100%;  
 }
@@ -17,35 +23,69 @@ a:hover{
   text-decoration: none;
 }
 
-.nav-bar{
-  background-color: #ffffff;
-  margin-bottom: 40px;
-  box-shadow: 0px 1px 6px #7f7f7f;
-}
-
-
 .navigation-links {
   padding-left: 10px;
 }
 
-.hero{
-  margin-bottom: 10px;
+.titles{
+  margin-top: 20px;
+}
+
+.subtitles{
+  margin-top: 20px;
 }
 
 
+// Index/ Layout
+.nav-bar{
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px #7f7f7f;
+  margin-bottom: 20px;
+}
+
+footer {
+  margin-top: 0px;
+  padding-top: 50px;
+}
+
+#hero{
+  width: 100%;
+  height: 600px;
+  margin-top:20px;
+  z-index: -9999;
+}
+
+.claim{
+font-weight: 500;
+z-index: 999;
+}
+
+
+
+
+//Events
 #map{
   height: 400px;
   background-color: #7f7f7f;
+  width: 100%;
 }
+
+
 
 
 .event-view{
   height: 14rem;
   object-fit: cover;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 
-footer{
-  border-top: 1px solid #7f7f7f;
+.button-top{
+margin-top: 20px;
 }
+
+.button-down{
+ margin-top: 20px; 
+}
+
