--- a/views/client/login.hbs
+++ b/views/client/login.hbs
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
 
-            <h1>Inicio sesión</h1>
+            <h3>Inicio sesión</h3>
 
             <form action="/login" method="POST">
                 <div class='form-group'>
@@ -12,9 +12,9 @@
                 </div>
                 <div class='form-group'>
                     <label for='password'>Contraseña</label>
-                    <input name='password' type='password' class='form-control' placeholder='******' id='password'>
+                    <input name='password' type='password' class='form-control' placeholder='Contraseña' id='password'>
                 </div>
-                <button type='submit' class='btn btn-dark btn-block'>Iniciar sesión</button>
+                <button type='submit' class='btn-outline-dark rounded-0 btn-block'>Iniciar sesión</button>
                 {{#if errorMsg}}
                 <p style="margin-top: 10px;background: red; color: white; text-align: center; padding: 10px">
                     {{errorMsg}}</p>
