--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,15 @@
+<section>
+    <img src="./images/live-set.jpg">
+</section>
 <div class="container">
-    {{!-- <div class="col-md-6 row">
-        <h1>{{title}}</h1>
-    </div> --}}
+
+    <div class="column">
+        <div class="col-md-6">
+            <h1 class="claim">Accede a eventos</h1>
+            <h4>En directo online</h4>
+        </div>
+    </div>
+
 
 </div>
-
-<section class="hero"><img src="https://i.ytimg.com/vi/ilbgklhtWHA/maxresdefault.jpg" alt="Main img"></section>
+</div>
