--- a/views/main/event-list.hbs
+++ b/views/main/event-list.hbs
@@ -1,27 +1,39 @@
 <div class="container">
-
     <h2>Events</h2>
+</div>
+
+
+<figure class="col-md-12" id="map"></figure>
+
+
+<div class="container">
 
     <div class="row">
-        <figure class="col-md-12" id="map"></figure>
-    </div>
 
-    <div class="row col-md-12 justify-content-right">
+        <div class="col-10 justify-content-right">
 
-        {{#each allEvents}}
-        <div class="col-md-6">
+
+
+            {{#each allEvents}}
             <img src="{{pictureUrl}}" class="event-view" alt="{{name}} imagen">
-            <a href="/edit/{{id}}'">
-                <h3><a href="/details/{{id}}">{{name}}</a></h3>
-            </a>
-            <h5>{{description}} {{genre}} </h5>
-            <p>Duration {{duration}} mins</p>
-            <a href="/edit/{{id}}">Editar</a>
-            <a href="/delete/{{id}}">Borrar</a>
+            <div class="col-md-4">
+                <a href="/edit/{{id}}'">
+                    <h3><a href="/details/{{id}}">{{name}}</a></h3>
+                </a>
+                <h5>{{description}} {{genre}} </h5>
+                <p>Duration {{duration}} mins</p>
 
+            </div>
+
+            <aside class="col-md-2 align-items-center space-between">
+                <a class="btn  btn-outline-dark rounded-0 button-top" href="/edit/{{id}}">Editar</a>
+                <a class="btn  btn-outline-danger rounded-0 button-down" href="/delete/{{id}}">Borrar</a>
+                
+            </aside>
+
+            {{/each}}
+            <a class="btn  btn-outline-dark rounded-0 button-top" href="/new-event">Crear evento</a>
         </div>
-        {{/each}}
-
     </div>
 </div>
 
