--- a/views/partner/login.hbs
+++ b/views/partner/login.hbs
@@ -12,7 +12,7 @@
                 </div>
                 <div class='form-group'>
                     <label for='password'>Contraseña</label>
-                    <input name='password' type='password' class='form-control' placeholder='******' id='password'>
+                    <input name='password' type='password' class='form-control' placeholder='Contraseña' id='password'>
                 </div>
                 <button type='submit' class='btn btn-dark btn-block'>Iniciar sesión</button>
                 {{#if errorMsg}}
