--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,37 @@
 body {
-  font-family: sans-serif; }
+  font-family: 'Lato', sans-serif; }
 
-h1, h2, h3, h4, h5 {
-  font-weight: 500; }
+h1, h2, h3 {
+  font-weight: 400; }
+
+h4, h5, h6, p {
+  color: #bcbabb;
+  font-weight: 300; }
 
 img {
   width: 100%; }
 
+.frame {
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+.button-size {
+  width: 20vh; }
+
+.genre {
+  text-transform: uppercase;
+  font-size: .9em;
+  color: #bcbabb; }
+
 a {
-  color: #7f7f7f;
+  font-weight: 700;
+  color: #000;
   text-decoration: none; }
 
 a:hover {
-  font-weight: 600;
   color: black;
-  text-decoration: none; }
+  text-decoration: none;
+  transition: all .5s; }
 
 .navigation-links {
   padding-left: 10px; }
@@ -27,18 +44,21 @@ a:hover {
 
 .nav-bar {
   background-color: #ffffff;
-  box-shadow: 0px 1px 6px #7f7f7f;
-  margin-bottom: 20px; }
+  box-shadow: 0px 1px 6px #bcbabb;
+  height: 60px;
+  position: sticky; }
 
 footer {
-  margin-top: 0px;
-  padding-top: 50px; }
+  padding-top: 20px;
+  background-color: #bcbabb;
+  height: 60px; }
 
 #hero {
-  width: 100%;
   height: 600px;
-  margin-top: 20px;
-  z-index: -9999; }
+  z-index: -9999;
+  object-fit: cover;
+  background-image: url(../images/live-set.jpg);
+  color: #ffffff; }
 
 .claim {
   font-weight: 500;
@@ -60,6 +80,9 @@ footer {
 
 .button-down {
   margin-top: 20px; }
+
+.titulo {
+  color: red; }
 
 #streaming {
   width: 100%;
