--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,6 @@
-<section>
-    <img src="./images/live-set.jpg">
-</section>
-<div class="container">
+
+<div class="container-fluid" id="hero">
+
 
     <div class="column">
         <div class="col-md-6">
