--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,10 @@
   <title>{{title}}</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
@@ -25,17 +29,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="/events">Eventos</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 
-        <li class="nav-item"><a class="nav-link " href="/signup">Sign up</a></li>
+        <li class="nav-item"><a class="nav-link " href="/signup">Registrate</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
       </ul>
-      </ul>
+
 
     </div>
   </nav>
