--- a/views/main/event-details.hbs
+++ b/views/main/event-details.hbs
@@ -1,38 +1,28 @@
-<div class="container">
+<section class="container frame">
 
-    <div class="row  justify-content-right">
+    <h2>Detalles</h2>
 
+    <div class="row">
 
-        <div class="column">
+        <div class="col-md-8"><img src="{{pictureUrl}}" alt="Concert"></div>
 
-            <h2>Details</h2>
-
-
-
-            <h3>{{theEvent.name}}</h3>
+        <aside class="col-md-4">
+            <h3 class="titulo">{{name}}</h3>
 
             <h5>{{description}} {{genre}} </h5>
-            <p>Duration {{duration}} mins</p>
+            <p>Duración: {{duration}} mins</p>
+
+            <hr>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore laborum quia, distinctio sapiente
+                corrupti quam corporis tempora asperiores molestiae accusantium quaerat quas laudantium et modi? Nihil
+                corporis cumque id inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                repudiandae.
+            </p>
+
             <p><a class="btn btn-outline-dark rounded-0 button-top" href="/streaming">Acceso al evento</a></p>
-            <p><a href="/events/"> Volver a eventos</a></p>
-
-            <img src="{{pictureUrl}}" alt="Concert">
-
-
-
-        </div>
-
-
-        <div class="column">
-            <aside class="col-md-6">
-
-
-
-            </aside>
-
-
-
-        </div>
-
+            <p><a class="btn" href="/events/"> Volver a eventos</a></p>
+        </aside>
     </div>
-</div>
+
+</section>
