--- a/views/main/event-edit.hbs
+++ b/views/main/event-edit.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container frame">
 
     <h3> Editar <h3>
             <h4 class="subtitles">{{theEvent.name}}</h4>
