--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
-
 <div class="container-fluid" id="hero">
 
 
     <div class="column">
-        <div class="col-md-6">
+        <div class="col-md-12 text-right align-text-bottom">
             <h1 class="claim">Accede a eventos</h1>
-            <h4>En directo online</h4>
+            <h4 class="more-info "><strong> En directo online </strong></h4>
+
         </div>
     </div>
 
