--- a/views/main/event-details.hbs
+++ b/views/main/event-details.hbs
@@ -9,9 +9,9 @@
         <aside class="col-md-4">
             <h3 class="titulo">{{name}}</h3>
 
-            <h5>{{description}} {{genre}} </h5>
+            <h5>{{description}} </h5>
             <p>Duración: {{duration}} mins</p>
-
+            <a class="genre">{{genre}}</a>
             <hr>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore laborum quia, distinctio sapiente
