--- a/views/main/streaming.hbs
+++ b/views/main/streaming.hbs
@@ -1,4 +1,4 @@
-<section class="frame">
+<section>
     <iframe id="streaming" src="https://www.youtube.com/embed/xKeduffv7_U?controls=0&amp;start=690" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
@@ -7,6 +7,10 @@
     <div class="column">
         <a class="btn rounded-0 btn-outline-dark">Donate</a>
     </div>
+    <form action="POST"> 
+        
+    </form>
+
 
 </div>
 </div>
