--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,11 @@ body {
   font-family: 'Lato', sans-serif; }
 
 h1, h2, h3 {
-  font-weight: 400; }
+  font-weight: 600;
+  color: #000000; }
 
 h4, h5, h6, p {
-  color: #bcbabb;
+  color: #000000;
   font-weight: 300; }
 
 img {
@@ -15,23 +16,22 @@ img {
   margin-top: 20px;
   margin-bottom: 20px; }
 
-.button-size {
-  width: 20vh; }
+a {
+  font-weight: 700;
+  color: #7f7f7f;
+  text-decoration: none; }
+
+a:hover {
+  color: black;
+  transition: ease-in .5s; }
 
 .genre {
   text-transform: uppercase;
   font-size: .9em;
   color: #bcbabb; }
 
-a {
-  font-weight: 700;
-  color: #000;
+.genre:hover {
   text-decoration: none; }
-
-a:hover {
-  color: black;
-  text-decoration: none;
-  transition: all .5s; }
 
 .navigation-links {
   padding-left: 10px; }
@@ -50,7 +50,7 @@ a:hover {
 
 footer {
   padding-top: 20px;
-  background-color: #bcbabb;
+  background-color: #ffffff;
   height: 60px; }
 
 #hero {
@@ -61,11 +61,15 @@ footer {
   color: #ffffff; }
 
 .claim {
-  font-weight: 500;
+  color: #ffffff;
+  font-weight: 600;
   z-index: 999; }
 
+.more-info {
+  color: #ffffff; }
+
 #map {
-  height: 400px;
+  height: 60vh;
   background-color: #7f7f7f;
   width: 100%; }
 
@@ -82,10 +86,13 @@ footer {
   margin-top: 20px; }
 
 .titulo {
-  color: red; }
+  color: #000000; }
 
 #streaming {
   width: 100%;
   height: 600px; }
+
+.center-frame {
+  margin-left: 15px; }
 
 /*# sourceMappingURL=style.css.map */
