--- a/views/client/signup.hbs
+++ b/views/client/signup.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center frame">
         <div class="col-md-6">
 
             <h3>Regístrate</h3>
