--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,8 +10,6 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
@@ -31,13 +29,13 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a class="nav-link" href="/events">Eventos</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">Nosotros</a></li>
 
-        <li class="nav-item"><a class="nav-link " href="/signup">Registrate</a></li>
+        <li class="nav-item"><a class="nav-link " href="/signup">Regístrate</a></li>
 
         <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
       </ul>
 
 
@@ -64,9 +62,9 @@
 
     <div class="row">
 
-      <div class="col-12 col-md-3 social ">
+      <div class="col-md-12 col-md-3 justify-content-right">
 
-        <a class="navigation-links" href="TO-DO">Partners</a>
+        <a class="navigation-links" href="/partner/about">Partners</a>
         <a class="navigation-links" href="/partner/signup">Signup</a>
         <a class="navigation-links" href="/partner/login">Log in</a>
 
