--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,9 +55,9 @@ footer {
 
 #hero {
   height: 600px;
+  width: 100%;
   z-index: -9999;
   object-fit: cover;
-  background-image: url(../images/live-set.jpg);
   color: #ffffff; }
 
 .claim {
