--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,14 @@
-<div class="container-fluid" id="hero">
+<section id="hero">
 
-
+    <img src="./images/live-set.jpg">
+    {{!-- 
     <div class="column">
         <div class="col-md-12 text-right align-text-bottom">
             <h1 class="claim">Accede a eventos</h1>
             <h4 class="more-info "><strong> En directo online </strong></h4>
 
         </div>
-    </div>
+    </div> --}}
 
 
-</div>
-</div>
+</section>
